Moved to markdown and webgen

--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@ jQuery().ready(function() {
       <nav id="access" role="navigation">
  	<div id="primary-nav" class="nav">
 	  <ul>
-	    <li><a href="http://www.joyofclojure.com" rel="home">Home</a></li>
+	    <li><a href="/" rel="home">Home</a></li>
             <li><a href="http://github.com/joyofclojure/" title="The official JoC source code.">Source</a></li>
 	    <li class="page_item page-item-48"><a href="reviews/">Reviews</a></li>
 	    <li class="page_item page-item-55"><a href="toc/">ToC</a></li>
