--- a/public/2nd/index.html
+++ b/public/2nd/index.html
@@ -5,7 +5,7 @@
 
     <title>More Joy</title>
 
-    <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="../styles/2nd.css" type="text/css" media="screen">
     <!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
