--- a/public/buy/index.html
+++ b/public/buy/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Joy of Clojure!</title>
-<meta http-equiv="REFRESH" content="0;url=http://www.manning.com/affiliate/idevaffiliate.php?id=1111_221"></HEAD>
+<meta http-equiv="REFRESH" content="0;url=http://affiliate.manning.com/idevaffiliate.php?id=1112&url=59"></HEAD>
 <BODY>
 
 <font size="-3">
