Changing buy links

--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@ jQuery().ready(function() {
             <li><a href="http://github.com/joyofclojure/" title="The official JoC source code.">Source</a></li>
 	    <li class="page_item page-item-48"><a href="reviews/">Reviews</a></li>
 	    <li class="page_item page-item-55"><a href="toc/">ToC</a></li>
-	    <li class="page_item page-item-50"><a href="buy-joc/">Buy</a></li>
+	    <li class="page_item page-item-50"><a href="buy/">Buy</a></li>
 	    <li class="page_item page-item-87"><a href="foreword/">Foreword</a></li>
 	    <li class="page_item page-item-39"><a href="errata/">Errata</a></li>
 	    <li class="page_item page-item-148"><a href="more/">More</a></li>
