Changed affiliate link for now

--- a/public/buy/index.html
+++ b/public/buy/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <title>Joy of Clojure!</title>
-<meta http-equiv="REFRESH" content="0;url=http://affiliate.manning.com/idevaffiliate.php?id=1112&url=59"></HEAD>
+<!-- <meta http-equiv="REFRESH" content="0;url=http://affiliate.manning.com/idevaffiliate.php?id=1112&url=59"> -->
+<meta http-equiv="REFRESH" content="0;url=http://www.amazon.com/dp/1617291412/ref=sr_1_1?ie=UTF8&tag=fogus-20">
+</HEAD>
 <BODY>
 
 <font size="-3">
